# Textual-Study

./: pyproject.toml
src/textual_study/: stopwatch.py
